Fix usage example code.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@ example:</p>
   <span class="nx">$</span><span class="p">(</span><span class="s1">'#my-cs-badges).scorecard({</span>
 <span class="s1">    username: '</span><span class="nx">dmondark</span><span class="s1">',</span>
 <span class="s1">    sections: ['</span><span class="nx">badges</span><span class="s1">'],</span>
-<span class="s1">    loading:</span>
+<span class="s1">    loading: {</span>
 <span class="s1">      message: '</span><span class="nx">Loading</span> <span class="nx">Code</span> <span class="nx">School</span> <span class="nx">bages</span><span class="p">...</span><span class="err">'</span>
+<span class="s1">    }</span>
   <span class="p">});</span>
 <span class="nt">&lt;/script&gt;</span>
 </pre>
