Fix usage sample and its highlighting.

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@ example:</p>
 <span class="nt">&lt;/div&gt;</span>
 ...
 <span class="nt">&lt;script </span><span class="na">type=</span><span class="s">"text/javascript"</span><span class="nt">&gt;</span>
-  <span class="nx">$</span><span class="p">(</span><span class="s1">'#my-cs-badges).scorecard({</span>
-<span class="s1">    username: '</span><span class="nx">dmondark</span><span class="s1">',</span>
-<span class="s1">    sections: ['</span><span class="nx">badges</span><span class="s1">'],</span>
-<span class="s1">    loading: {</span>
-<span class="s1">      message: '</span><span class="nx">Loading</span> <span class="nx">Code</span> <span class="nx">School</span> <span class="nx">bages</span><span class="p">...</span><span class="err">'</span>
-<span class="s1">    }</span>
+  <span class="nx">$</span><span class="p">(</span><span class="s1">'#my-cs-badges'</span><span class="p">).</span><span class="nx">scorecard</span><span class="p">({</span>
+    <span class="nx">username</span><span class="o">:</span> <span class="s1">'abc'</span><span class="p">,</span>
+    <span class="nx">sections</span><span class="o">:</span> <span class="p">[</span><span class="s1">'badges'</span><span class="p">],</span>
+    <span class="nx">loading</span><span class="o">:</span> <span class="p">{</span>
+      <span class="nx">message</span><span class="o">:</span> <span class="s1">'Loading Code School Badges...'</span>
+    <span class="p">}</span>
   <span class="p">});</span>
 <span class="nt">&lt;/script&gt;</span>
 </pre>
