Add source code to demo. Also invoke only when document is ready.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h2>Demo!</h2>
 
-<p>A demo page is available <a href="demo.html">here</a>.</p>
+<p>A demo page is available <a href="demo.html">here</a>. The plugin is also being used on <a href="http://awhitebox.com/etc/code">my 'code' page</a>.</p>
 
 <h2>Installation</h2>
 
@@ -107,7 +107,7 @@ css selector would look something like:</p>
 
 <h2>Thanks</h2>
 
-<p>Many thanks to the good guys at Code School for the help with the API.</p>
+<p>Many thanks to the good guys at <a href="http://www.codeschool.com">Code School</a> for the help with the API.</p>
 
 <p>Also thanks to Mihail Szabolcs (<a href="https://twitter.com/theicebreaker">@theicebreaker</a>)
 for writing <a href="https://github.com/icebreaker/proudify">Proudify</a> which was the main
